--- a/app/globals.css
+++ b/app/globals.css
@@ -367,9 +367,9 @@ small {
 /* Images */
 
 .logo {
-	width: 35px;
+	width: 95px;
 	height: auto;
-	margin: 0 0.5em 0 0;
+	margin-right: -1rem;
 }
 
 .identicon {
